workday/12.1/modules/ROOT/pages/workday-connector-troubleshoot.adoc
= Troubleshoot Workday Connector

== Timeout in Studio

Sometimes, you might experience a timeout in Anypoint Studio while obtaining metadata from Workday Connector.  

=== Cause 

This can happen due to connectivity issues. 

=== Symptoms

If you experience a timeout while obtaining metadata from Workday Connector, you get one of the following errors:

[source,text,linenums]
----
org.mule.runtime.api.exception.MuleRuntimeException: Error while retrieving soap client id [Absence_Management]
  org.mule.runtime.api.exception.MuleRuntimeException: Error while retrieving soap client id [Absence_Management]
  Caused by: java.util.concurrent.ExecutionException:
  org.mule.wsdl.parser.exception.WsdlParsingException: Error processing
  WSDL file [https://wd3-impl-services1.workday.com/ccx/service/deakin_amu1/Absence_Management/v29.1?wsdl]:
  Unable to locate document at 'https://wd3-impl-services1.workday.com/ccx/service/deakin_amu1/Absence_Management/v29.1?wsdl&#39;.
----

Or:

[source,text,linenums]
----
org.mule.tooling.client.api.exception.TimeoutException: Mule Agent REST service timed out
  org.mule.tooling.client.api.exception.TimeoutException: Mule Agent REST service timed out
  javax.ws.rs.ProcessingException: java.net.SocketTimeoutException: Read timed out
  	at org.glassfish.jersey.client.HttpUrlConnector.apply(HttpUrlConnector.java:244)
  	at org.glassfish.jersey.client.ClientRuntime.invoke(ClientRuntime.java:245)
  	at org.glassfish.jersey.client.JerseyInvocation$1.call(JerseyInvocation.java:671)
  	at org.glassfish.jersey.client.JerseyInvocation$1.call(JerseyInvocation.java:668)
  	at org.glassfish.jersey.internal.Errors.process(Errors.java:315)
  	at org.glassfish.jersey.internal.Errors.process(Errors.java:297)
  	at org.glassfish.jersey.internal.Errors.process(Errors.java:228)
  	at org.glassfish.jersey.process.internal.RequestScope.runInScope(RequestScope.java:444)
  	at org.glassfish.jersey.client.JerseyInvocation.invoke(JerseyInvocation.java:668)
  	at
----

=== Resolution

When one of these errors occurs, follow these steps to increase the timeout in Anypoint Studio:

. In Anypoint Studio, navigate to *Preferences > Anypoint Studio > Tooling*.
. Increase the values to double the default value for `Default Connection Timeout` and `Default Read Timeout`.
. Click *Apply*, and restart Studio.

== See Also

https://help.mulesoft.com[MuleSoft Help Center]