workday/13.0/modules/ROOT/pages/workday-connector-troubleshoot.adoc
= Troubleshooting Workday Connector 13.0 - Mule 4

== Remove the Warning on Every HTTP Call

Anypoint Connector for Workday (Workday Connector) logs the following warning message on every HTTP call:

[source,xml,linenums]
----
WARN  2020-11-10 10:51:57,494 [[MuleRuntime].uber.12: [workday].workdayFlow.BLOCKING @766054e8] [processor: ; event: 5ec7a670-233a-11eb-a099-f018989d247f] com.ning.http.client.RequestBuilderBase: Value was null, set to ""
----

To remove this warning from the Anypoint Studio console, update `src/main/resources/log4j2.xml` with the following line:
[source,xml,linenums]
----
<AsyncLogger name="com.ning.http.client.RequestBuilderBase" level="ERROR"/>
----

== Timeout in Studio

Due to connectivity issues, you might experience a timeout while obtaining metadata from Workday Connector and receive one of these errors:

=== Error While Retrieving SOAP Client ID

[source,text,linenums]
----
org.mule.runtime.api.exception.MuleRuntimeException: Error while retrieving soap client id [Absence_Management]
  org.mule.runtime.api.exception.MuleRuntimeException: Error while retrieving soap client id [Absence_Management]
  Caused by: java.util.concurrent.ExecutionException:
  org.mule.wsdl.parser.exception.WsdlParsingException: Error processing
  WSDL file [https://wd3-impl-services1.workday.com/ccx/service/deakin_amu1/Absence_Management/v29.1?wsdl]:
  Unable to locate document at 'https://wd3-impl-services1.workday.com/ccx/service/deakin_amu1/Absence_Management/v29.1?wsdl&#39;.
----

=== Mule Agent REST Service Timed Out

[source,text,linenums]
----
org.mule.tooling.client.api.exception.TimeoutException: Mule Agent REST service timed out
  org.mule.tooling.client.api.exception.TimeoutException: Mule Agent REST service timed out
  javax.ws.rs.ProcessingException: java.net.SocketTimeoutException: Read timed out
  	at org.glassfish.jersey.client.HttpUrlConnector.apply(HttpUrlConnector.java:244)
  	at org.glassfish.jersey.client.ClientRuntime.invoke(ClientRuntime.java:245)
  	at org.glassfish.jersey.client.JerseyInvocation$1.call(JerseyInvocation.java:671)
  	at org.glassfish.jersey.client.JerseyInvocation$1.call(JerseyInvocation.java:668)
  	at org.glassfish.jersey.internal.Errors.process(Errors.java:315)
  	at org.glassfish.jersey.internal.Errors.process(Errors.java:297)
  	at org.glassfish.jersey.internal.Errors.process(Errors.java:228)
  	at org.glassfish.jersey.process.internal.RequestScope.runInScope(RequestScope.java:444)
  	at org.glassfish.jersey.client.JerseyInvocation.invoke(JerseyInvocation.java:668)
  	at
----

=== Resolution

When one of these errors occurs, increase the timeout values in Anypoint Studio:

. In Anypoint Studio, navigate to *Preferences > Anypoint Studio > Tooling*.
. Increase the values to double the default value for `Default Connection Timeout` and `Default Read Timeout`.
. Click *Apply* and restart Studio.

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
